agregue un parrafo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </div>
 
 <!-- <script src="js/scripts.js"></script> alert -->
-
+<h1>Hola edda</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo laudantium molestias laborum sapiente itaque quisquam voluptates sunt aliquid recusandae. Eum minus tempore numquam sint rem cum expedita nesciunt non voluptate!</p>
 </body>
 </html>
